@@ -4,9 +4,6 @@
 [submodule "lib/soplex-git"]
 	path = lib/soplex-git
 	url = ../../gcg/soplex.git
-[submodule "lib/bliss-git"]
-	path = lib/bliss-git
-	url = ../../gcg/bliss.git
 [submodule "lib/googletest-git"]
 	path = lib/googletest-git
 	url = ../../gcg/googletest.git
