@@ -65,7 +65,7 @@ STATISTICS  =  	false
 PROJECT		=	none
 GTEST		=	false
 PARASCIP	= 	true
-BLISS      	=   false
+BLISS      	=   true
 CLIQUER     =   false
 HMETIS      =   false
 OPENMP      =   false
