@@ -127,12 +127,16 @@ googletest:
 
 .PHONY: bliss
 bliss:
-ifneq ("$(wildcard lib/bliss-git/Makefile-manual)","")
-		-mkdir -p lib/bliss-git/build
-		@$(MAKE) -C lib/bliss-git -f Makefile-manual
+ifneq ("$(wildcard lib/scip-git/src/bliss/Makefile-manual)","")
+		-mkdir -p lib/scip-git/src/bliss/build
+		@$(MAKE) -C lib/scip-git/src/bliss -f Makefile-manual
 else
-		@$(MAKE) -C lib/bliss-git
+		@$(MAKE) -C lib/scip-git/src/bliss
 endif
+		-ln -sfn ../../src/bliss/include/bliss lib/scip-git/lib/include/
+		-ln -sfn ../../src/bliss/libbliss_static.a lib/scip-git/lib/static/libbliss.linux.x86_64.gnu.a
+		-ln -sfn ../scip-git/src/bliss/include/bliss lib/include/
+		-ln -sfn ../scip-git/src/bliss/libbliss_static.a lib/static/libbliss.a
 
 .PHONY: cliquer
 cliquer: cliquerobj cliquerlib
